Examples/glfw3/gl.pas

procedure glGetMapfv(target: TGLenum; query: TGLenum; v: PGLfloat); cdecl; external;
procedure glGetMapiv(target: TGLenum; query: TGLenum; v: PGLint); cdecl; external;
procedure glEvalCoord1d(u: TGLdouble); cdecl; external;
procedure glEvalCoord1f(u: TGLfloat); cdecl; external;
procedure glEvalCoord1dv(u: PGLdouble); cdecl; external;
procedure glEvalCoord1fv(u: PGLfloat); cdecl; external;
procedure glEvalCoord2d(u: TGLdouble; v: TGLdouble); cdecl; external;
procedure glEvalCoord2f(u: TGLfloat; v: TGLfloat); cdecl; external;
procedure glEvalCoord2dv(u: PGLdouble); cdecl; external;
procedure glEvalCoord2fv(u: PGLfloat); cdecl; external;
procedure glMapGrid1d(un: TGLint; u1: TGLdouble; u2: TGLdouble); cdecl; external;
procedure glMapGrid1f(un: TGLint; u1: TGLfloat; u2: TGLfloat); cdecl; external;
procedure glMapGrid2d(un: TGLint; u1: TGLdouble; u2: TGLdouble; vn: TGLint; v1: TGLdouble;
  v2: TGLdouble); cdecl; external;
procedure glMapGrid2f(un: TGLint; u1: TGLfloat; u2: TGLfloat; vn: TGLint; v1: TGLfloat;
  v2: TGLfloat); cdecl; external;
procedure glEvalPoint1(i: TGLint); cdecl; external;
procedure glEvalPoint2(i: TGLint; j: TGLint); cdecl; external;
procedure glEvalMesh1(mode: TGLenum; i1: TGLint; i2: TGLint); cdecl; external;
procedure glEvalMesh2(mode: TGLenum; i1: TGLint; i2: TGLint; j1: TGLint; j2: TGLint); cdecl; external;
{
 * Fog
  }
procedure glFogf(pname: TGLenum; param: TGLfloat); cdecl; external;
procedure glFogi(pname: TGLenum; param: TGLint); cdecl; external;
procedure glFogfv(pname: TGLenum; params: PGLfloat); cdecl; external;
procedure glFogiv(pname: TGLenum; params: PGLint); cdecl; external;
{
 * Selection and Feedback
  }
procedure glFeedbackBuffer(size: TGLsizei; _type: TGLenum; buffer: PGLfloat); cdecl; external;
procedure glPassThrough(token: TGLfloat); cdecl; external;
procedure glSelectBuffer(size: TGLsizei; buffer: PGLuint); cdecl; external;
procedure glInitNames; cdecl; external;
procedure glLoadName(Name: TGLuint); cdecl; external;
procedure glPushName(Name: TGLuint); cdecl; external;
procedure glPopName; cdecl; external;
{
 * OpenGL 1.2
  }
const
  GL_RESCALE_NORMAL = $803A;
  GL_CLAMP_TO_EDGE = $812F;
  GL_MAX_ELEMENTS_VERTICES = $80E8;
  GL_MAX_ELEMENTS_INDICES = $80E9;
  GL_BGR = $80E0;
  GL_BGRA = $80E1;
  GL_UNSIGNED_BYTE_3_3_2 = $8032;
  GL_UNSIGNED_BYTE_2_3_3_REV = $8362;
  GL_UNSIGNED_SHORT_5_6_5 = $8363;
  GL_UNSIGNED_SHORT_5_6_5_REV = $8364;
  GL_UNSIGNED_SHORT_4_4_4_4 = $8033;
  GL_UNSIGNED_SHORT_4_4_4_4_REV = $8365;
  GL_UNSIGNED_SHORT_5_5_5_1 = $8034;
  GL_UNSIGNED_SHORT_1_5_5_5_REV = $8366;
  GL_UNSIGNED_INT_8_8_8_8 = $8035;
  GL_UNSIGNED_INT_8_8_8_8_REV = $8367;
  GL_UNSIGNED_INT_10_10_10_2 = $8036;
  GL_UNSIGNED_INT_2_10_10_10_REV = $8368;
  GL_LIGHT_MODEL_COLOR_CONTROL = $81F8;
  GL_SINGLE_COLOR = $81F9;
  GL_SEPARATE_SPECULAR_COLOR = $81FA;
  GL_TEXTURE_MIN_LOD = $813A;
  GL_TEXTURE_MAX_LOD = $813B;
  GL_TEXTURE_BASE_LEVEL = $813C;
  GL_TEXTURE_MAX_LEVEL = $813D;
  GL_SMOOTH_POINT_SIZE_RANGE = $0B12;
  GL_SMOOTH_POINT_SIZE_GRANULARITY = $0B13;
  GL_SMOOTH_LINE_WIDTH_RANGE = $0B22;
  GL_SMOOTH_LINE_WIDTH_GRANULARITY = $0B23;
  GL_ALIASED_POINT_SIZE_RANGE = $846D;
  GL_ALIASED_LINE_WIDTH_RANGE = $846E;
  GL_PACK_SKIP_IMAGES = $806B;
  GL_PACK_IMAGE_HEIGHT = $806C;
  GL_UNPACK_SKIP_IMAGES = $806D;
  GL_UNPACK_IMAGE_HEIGHT = $806E;
  GL_TEXTURE_3D = $806F;
  GL_PROXY_TEXTURE_3D = $8070;
  GL_TEXTURE_DEPTH = $8071;
  GL_TEXTURE_WRAP_R = $8072;
  GL_MAX_3D_TEXTURE_SIZE = $8073;
  GL_TEXTURE_BINDING_3D = $806A;

procedure glDrawRangeElements(mode: TGLenum; start: TGLuint; end_: TGLuint; Count: TGLsizei; _type: TGLenum;
  indices: PGLvoid); cdecl; external;
procedure glTexImage3D(target: TGLenum; level: TGLint; internalFormat: TGLint; Width: TGLsizei; Height: TGLsizei;
  depth: TGLsizei; border: TGLint; format: TGLenum; _type: TGLenum; pixels: PGLvoid); cdecl; external;
procedure glTexSubImage3D(target: TGLenum; level: TGLint; xoffset: TGLint; yoffset: TGLint; zoffset: TGLint;
  Width: TGLsizei; Height: TGLsizei; depth: TGLsizei; format: TGLenum; _type: TGLenum;
  pixels: PGLvoid); cdecl; external;
procedure glCopyTexSubImage3D(target: TGLenum; level: TGLint; xoffset: TGLint; yoffset: TGLint; zoffset: TGLint;
  x: TGLint; y: TGLint; Width: TGLsizei; Height: TGLsizei); cdecl; external;

const
  GL_CONSTANT_COLOR = $8001;
  GL_ONE_MINUS_CONSTANT_COLOR = $8002;
  GL_CONSTANT_ALPHA = $8003;
  GL_ONE_MINUS_CONSTANT_ALPHA = $8004;
  GL_COLOR_TABLE = $80D0;
  GL_POST_CONVOLUTION_COLOR_TABLE = $80D1;
  GL_POST_COLOR_MATRIX_COLOR_TABLE = $80D2;
  GL_PROXY_COLOR_TABLE = $80D3;
  GL_PROXY_POST_CONVOLUTION_COLOR_TABLE = $80D4;
  GL_PROXY_POST_COLOR_MATRIX_COLOR_TABLE = $80D5;
  GL_COLOR_TABLE_SCALE = $80D6;
  GL_COLOR_TABLE_BIAS = $80D7;
  GL_COLOR_TABLE_FORMAT = $80D8;
  GL_COLOR_TABLE_WIDTH = $80D9;
  GL_COLOR_TABLE_RED_SIZE = $80DA;
  GL_COLOR_TABLE_GREEN_SIZE = $80DB;
  GL_COLOR_TABLE_BLUE_SIZE = $80DC;
  GL_COLOR_TABLE_ALPHA_SIZE = $80DD;
  GL_COLOR_TABLE_LUMINANCE_SIZE = $80DE;
  GL_COLOR_TABLE_INTENSITY_SIZE = $80DF;
  GL_CONVOLUTION_1D = $8010;
  GL_CONVOLUTION_2D = $8011;
  GL_SEPARABLE_2D = $8012;
  GL_CONVOLUTION_BORDER_MODE = $8013;
  GL_CONVOLUTION_FILTER_SCALE = $8014;
  GL_CONVOLUTION_FILTER_BIAS = $8015;
  GL_REDUCE = $8016;
  GL_CONVOLUTION_FORMAT = $8017;
  GL_CONVOLUTION_WIDTH = $8018;
  GL_CONVOLUTION_HEIGHT = $8019;
  GL_MAX_CONVOLUTION_WIDTH = $801A;
  GL_MAX_CONVOLUTION_HEIGHT = $801B;
  GL_POST_CONVOLUTION_RED_SCALE = $801C;
  GL_POST_CONVOLUTION_GREEN_SCALE = $801D;
  GL_POST_CONVOLUTION_BLUE_SCALE = $801E;
  GL_POST_CONVOLUTION_ALPHA_SCALE = $801F;
  GL_POST_CONVOLUTION_RED_BIAS = $8020;
  GL_POST_CONVOLUTION_GREEN_BIAS = $8021;
  GL_POST_CONVOLUTION_BLUE_BIAS = $8022;
  GL_POST_CONVOLUTION_ALPHA_BIAS = $8023;
  GL_CONSTANT_BORDER = $8151;
  GL_REPLICATE_BORDER = $8153;
  GL_CONVOLUTION_BORDER_COLOR = $8154;
  GL_COLOR_MATRIX = $80B1;
  GL_COLOR_MATRIX_STACK_DEPTH = $80B2;
  GL_MAX_COLOR_MATRIX_STACK_DEPTH = $80B3;
  GL_POST_COLOR_MATRIX_RED_SCALE = $80B4;
  GL_POST_COLOR_MATRIX_GREEN_SCALE = $80B5;
  GL_POST_COLOR_MATRIX_BLUE_SCALE = $80B6;
  GL_POST_COLOR_MATRIX_ALPHA_SCALE = $80B7;
  GL_POST_COLOR_MATRIX_RED_BIAS = $80B8;
  GL_POST_COLOR_MATRIX_GREEN_BIAS = $80B9;
  GL_POST_COLOR_MATRIX_BLUE_BIAS = $80BA;
  GL_POST_COLOR_MATRIX_ALPHA_BIAS = $80BB;
  GL_HISTOGRAM = $8024;
  GL_PROXY_HISTOGRAM = $8025;
  GL_HISTOGRAM_WIDTH = $8026;
  GL_HISTOGRAM_FORMAT = $8027;
  GL_HISTOGRAM_RED_SIZE = $8028;
  GL_HISTOGRAM_GREEN_SIZE = $8029;
  GL_HISTOGRAM_BLUE_SIZE = $802A;
  GL_HISTOGRAM_ALPHA_SIZE = $802B;
  GL_HISTOGRAM_LUMINANCE_SIZE = $802C;
  GL_HISTOGRAM_SINK = $802D;
  GL_MINMAX = $802E;
  GL_MINMAX_FORMAT = $802F;
  GL_MINMAX_SINK = $8030;
  GL_TABLE_TOO_LARGE = $8031;
  GL_BLEND_EQUATION = $8009;
  GL_MIN = $8007;
  GL_MAX = $8008;
  GL_FUNC_ADD = $8006;
  GL_FUNC_SUBTRACT = $800A;
  GL_FUNC_REVERSE_SUBTRACT = $800B;
  GL_BLEND_COLOR = $8005;
